--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "displayName": "Custom Level Exporter",
     "description": "A tool for exporting custom levels as asset bundles.",
-    "unity": "2021.3",
+    "unity": "2022.3.21f1",
     "author": {
         "name": "Alexekokota",
         "email": "Alexekokota@hotmail.com",
@@ -12,6 +12,6 @@
     "dependencies": {},
     "repository": {
         "type": "git",
-        "url": "https://github.com/Alexekokota/REPO-level-exporter"
+        "url": "https://github.com/Alexekokota/REPO-level-exporter.git"
     }
 }
